--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
@@ -11,8 +10,7 @@
       <VBox spacing="8.0" VBox.vgrow="ALWAYS">
          <children>
             <Button fx:id="directoryChooserButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#chooseDirectory" text="Choose directory to encrypt or decrypt" />
-            <Label fx:id="shiftValueLabel" text="Shift" />
-            <TextField fx:id="shiftValueField" />
+            <TextField fx:id="shiftValueField" promptText="Shift" />
             <Button fx:id="encryptButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#encryptFiles" text="Encrypt or decrypt files" />
          </children>
       </VBox>
